# Nutrient_app

./: APP_LOGIC.py  CMakeLists.txt  README.md  main.c
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
wikipage/: 1_1_Overview.rst  2_1_Theoretical.rst  3_2_Build.rst  3_3_3MacOS.rst  4_2_2support.rst  conf.py
wikipage/Nutrient/: .buildinfo  1_0_Home.html  1_1_Overview.html  1_2_Inovation.html  1_3_Credicts.html  1_4_License.html  2_0_Documentation.html  2_1_Theoretical.html  2_2_Example.html  2_3_Software.html  3_0_Installation.html  3_1_Download.html  3_2_Build.html  3_3_1Linux.html  3_3_2Windows.html  3_3_3MacOS.html  3_3_Compile.html  3_4_Trouble.html  4_0_Input.html  4_1_1Master.html  4_1_2Digital.html  4_1_3Initial.html  4_1_4Forcing.html  4_1_In.html  4_2_1file.html  4_2_2support.html  4_2_out.html  5_0_Developer.html  5_1_Coding.html  5_2_Git.html  6_0_Reference.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
wikipage/Nutrient/.doctrees/: 1_0_Home.doctree  1_1_Overview.doctree  1_2_Inovation.doctree  1_3_Credicts.doctree  1_4_License.doctree  2_0_Documentation.doctree  2_1_Theoretical.doctree  2_2_Example.doctree  2_3_Software.doctree  3_0_Installation.doctree  3_1_Download.doctree  3_2_Build.doctree  3_3_1Linux.doctree  3_3_2Windows.doctree  3_3_3MacOS.doctree  3_3_Compile.doctree  3_4_Trouble.doctree  4_0_Input.doctree  4_1_1Master.doctree  (+13 more)
wikipage/source/: 3_3_1Linux.rst  3_3_2Windows.rst  conf.py  index.rst
(+3 files in other folders)
